<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.openapiprocessor</groupId>
        <artifactId>openapi-processor-samples</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <groupId>io.openapiprocessor.samples</groupId>
    <artifactId>spring-flux-boot-3-java</artifactId>
    <name>spring-flux-boot-3-java</name>
    <description>openapi-processor demo project using Spring Boot 3, Webflux, Java</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>

        <spring.version>3.5.11</spring.version>
        <spock.version>2.4-groovy-4.0</spock.version>
        <org.mapstruct.version>1.6.3</org.mapstruct.version>

        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
        <maven-surefire-plugin>3.5.2</maven-surefire-plugin>
        <maven-build-helper-plugin>3.1.0</maven-build-helper-plugin>
        <gmavenplus-plugin>3.0.2</gmavenplus-plugin>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- groovy tests -->
        <dependency>
          <groupId>org.spockframework</groupId>
          <artifactId>spock-core</artifactId>
          <scope>test</scope>
        </dependency>

        <dependency>
          <groupId>org.spockframework</groupId>
          <artifactId>spock-spring</artifactId>
          <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.version}</version>
            </plugin>

            <plugin>
                <groupId>io.openapiprocessor</groupId>
                <artifactId>openapi-processor-maven-plugin</artifactId>
                <version>${openapiprocessor.maven}</version>

                <dependencies>
                    <dependency>
                        <groupId>io.openapiprocessor</groupId>
                        <artifactId>openapi-processor-spring</artifactId>
                        <version>${openapiprocessor.spring}</version>
                    </dependency>
                    <dependency>
                        <groupId>io.openapiprocessor</groupId>
                        <artifactId>openapi-processor-json</artifactId>
                        <version>${openapiprocessor.json}</version>
                    </dependency>
                </dependencies>

                <configuration>
                    <apiPath>${project.basedir}/src/api/openapi.yaml</apiPath>
                    <id/>
                </configuration>

                <executions>
                    <execution>
                        <id>default-cli</id>
                        <phase>generate-sources</phase>

                        <configuration>
                            <id>spring</id>

                            <options>
                                <values>
                                    <targetDir>${project.basedir}/target/generated-sources/openapi</targetDir>
                                    <mapping>${project.basedir}/src/api/mapping.yaml</mapping>
                                    <parser>INTERNAL</parser>
                                    <showWarnings>true</showWarnings>
                                </values>
                            </options>
                        </configuration>

                        <goals>
                            <goal>process</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>json-resource</id>
                        <phase>generate-resources</phase>

                        <configuration>
                            <id>json</id>

                            <options>
                                <values>
                                    <targetDir>${project.basedir}/target/generated-resources/json</targetDir>
                                </values>
                            </options>
                        </configuration>
                        <goals>
                            <goal>process</goal>
                        </goals>
                    </execution>

                </executions>

            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${maven-build-helper-plugin}</version>
                <executions>
                    <execution>
                        <id>oap-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/openapi</source>
                            </sources>
                        </configuration>
                    </execution>

                    <execution>
                        <id>oap-resources</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/generated-resources/json</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- tests -->
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>${gmavenplus-plugin}</version>
                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>compileTests</goal>
                        </goals>
                        <configuration>
                            <testOutputDirectory>${project.basedir}/target/test-classes</testOutputDirectory>
                            <testSources>
                                <testSource>
                                    <directory>${project.basedir}/src/test/groovy</directory>
                                    <includes>
                                      <include>**/*.groovy</include>
                                    </includes>
                                </testSource>
                            </testSources>
                        </configuration>
                    </execution>

                    <execution>
                        <id>testInt</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>compileTests</goal>
                        </goals>
                        <configuration>
                            <testOutputDirectory>${project.basedir}/target/testInt-classes</testOutputDirectory>
                            <testSources>
                                <testSource>
                                    <directory>${project.basedir}/src/testInt/groovy</directory>
                                    <includes>
                                      <include>**/*.groovy</include>
                                    </includes>
                                </testSource>
                            </testSources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin}</version>

                <configuration>
                    <useFile>false</useFile>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>

                <executions>
                    <execution>
                        <id>test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
                            <testClassesDirectory>${project.basedir}/target/test-classes</testClassesDirectory>
                            <includes>
                                <include>**/*Spec.class</include>
                            </includes>
                        </configuration>
                    </execution>

                    <execution>
                        <id>testInt</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <testSourceDirectory>${project.basedir}/src/testInt</testSourceDirectory>
                            <testClassesDirectory>${project.basedir}/target/testInt-classes</testClassesDirectory>
                            <includes>
                                <include>**/*Spec.class</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencyManagement>
      <dependencies>
          <!-- spring -->
          <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-dependencies</artifactId>
              <version>${spring.version}</version>
              <type>pom</type>
              <scope>import</scope>
          </dependency>

          <!-- groovy tests -->
          <dependency>
              <groupId>org.spockframework</groupId>
              <artifactId>spock-bom</artifactId>
              <version>${spock.version}</version>
              <type>pom</type>
              <scope>import</scope>
          </dependency>
      </dependencies>
    </dependencyManagement>

</project>
